--- a/index.html
+++ b/index.html
@@ -2,11 +2,18 @@
 <html lang="en-ca">
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>Wholesome Grains</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="css/main.css" rel="stylesheet">
 </head>
 <body>
-
+    <nav class="links">
+      <h2>Grains</h2>
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Cereals</a></li>
+        <li><a href="#">Legumes</a></li>
+      </ul>
+    </nav>
 </body>
 </html>
