--- a/index.html
+++ b/index.html
@@ -4,16 +4,21 @@
   <meta charset="utf-8">
   <title>Wholesome Grains</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
+  <link href="https://fonts.googleapis.com/css?family=Merriweather:400,700&display=swap" rel="stylesheet">
   <link href="css/main.css" rel="stylesheet">
 </head>
 <body>
+  <header>
     <nav class="links">
-      <h2>Grains</h2>
-      <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Cereals</a></li>
-        <li><a href="#">Legumes</a></li>
-      </ul>
+        <img src="images/grain-left.svg">
+        <h1>Grains</h1>
+        <img src="images/grain-right.svg">
+          <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">Cereals</a></li>
+          <li><a href="#">Legumes</a></li>
+        </ul>
     </nav>
+  </header>
 </body>
 </html>
