Moved display flex
to grains tag which was also moved from header back to div

--- a/index.html
+++ b/index.html
@@ -9,16 +9,20 @@
 </head>
 <body>
   <header>
-    <nav class="links">
-        <img src="images/grain-left.svg">
-        <h1>Grains</h1>
-        <img src="images/grain-right.svg">
-          <ul>
+    <div class="grains">
+      <img src="images/grain-left.svg" alt="Grain Left">
+      <h1>Grains</h1>
+      <img src="images/grain-right.svg" alt="Grain Right">
+    </div>
+    <div class="nav">
+      <nav>
+        <ul>
           <li><a href="#">Home</a></li>
           <li><a href="#">Cereals</a></li>
           <li><a href="#">Legumes</a></li>
         </ul>
-    </nav>
+      </nav>
+    </div>
   </header>
 </body>
 </html>
