Moved border to ul

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
   <header>
-    <div class="grains">
+    <div class="grain-container">
       <img src="images/grain-left.svg" alt="Grain Left">
       <h1>Grains</h1>
       <img src="images/grain-right.svg" alt="Grain Right">
